--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,37 @@
-pywin32==308
-psutil~=6.1.1
-yara-python
-pymem==1.14.0
-zstandard~=0.23.0
-pillow==11.0.0
-google==3.0.0
-protobuf==4.25.1
-soupsieve==2.5
-lz4~=4.3.3
-requests~=2.32.3
-xmltodict~=0.14.2
-Crypto~=1.4.1
-pycryptodome
-cryptography
-openpyxl==3.1.5
-aiofiles~=24.1.0
-dateparser~=1.2.1
-beautifulsoup4~=4.12.3
-lxml~=5.3.1
-typing_extensions~=4.12.2
-pysilk-mod==1.6.4
+# 核心依赖
+protobuf>=3.20.0
+openpyxl>=3.0.0
+python-docx>=0.8.11
+
+# 数据处理
+pandas>=1.5.0
+numpy>=1.21.0
+
+# 图像处理
+Pillow>=9.0.0
+
+# 网络请求
+requests>=2.28.0
+
+# 加密解密
+pycryptodome>=3.15.0
+
+# 日志
+loguru>=0.6.0
+
+# 多进程
+multiprocess>=0.70.0
+
+# 其他工具
+tqdm>=4.64.0
+
+# Windows特定依赖
+psutil>=5.9.0
+pymem>=1.9.0
+pywin32>=300
+yara-python>=4.2.0
+aiofiles>=23.0.0
+
+# Web UI依赖
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
